--- a/src/resources/views/layouts/main.ejs
+++ b/src/resources/views/layouts/main.ejs
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%- block('title').toString() %></title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link href="css/fa-icon.css" rel="stylesheet"> -->
-    <link href="css/toastr.min.css" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <%- include('../partials/header') %>
-    </header>
-    <main>
-        <%-body -%>
-    </main>
-    <footer>
-        <%- include('../partials/footer') %>
-    </footer>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/toastr.min.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title><%- block('title').toString() %></title>
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <!-- <link href="css/fa-icon.css" rel="stylesheet"> -->
+        <link href="css/toastr.min.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet" />
+    </head>
+    <body>
+        <header><%- include('../partials/header') %></header>
+        <main><%-body -%></main>
+        <footer><%- include('../partials/footer') %></footer>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/toastr.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $(window).scroll(function () {
+                    if ($(this).scrollTop() > 114) {
+                        $('#navbar-top').addClass('fix-nav');
+                    } else {
+                        $('#navbar-top').removeClass('fix-nav');
+                    }
+                });
+            });
+        </script>
+    </body>
 </html>
