--- a/src/resources/views/layouts/main.ejs
+++ b/src/resources/views/layouts/main.ejs
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title><%- block('title').toString() %></title>
-        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,16 +14,20 @@
             referrerpolicy="no-referrer"
         />
         <!-- <link href="css/fa-icon.css" rel="stylesheet"> -->
-        <link href="css/toastr.min.css" rel="stylesheet" />
+        <!-- <link href="css/toastr.min.css" rel="stylesheet" /> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="css/custom.css" rel="stylesheet" />
     </head>
     <body>
         <header><%- include('../partials/header') %></header>
         <main><%-body -%></main>
         <footer><%- include('../partials/footer') %></footer>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/toastr.min.js"></script>
+        <!-- <script src="js/bootstrap.min.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        <!-- <script src="js/jquery.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- <script src="js/toastr.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script>
             $(document).ready(function () {
                 $(window).scroll(function () {
@@ -34,5 +39,18 @@
                 });
             });
         </script>
+        <% if (typeof data != "undefined") { %>
+            <% if (data.error) { %>
+                <script>
+                    toastr.error("<%= data.error %>");
+                </script>
+            <% } %>
+        
+            <% if (data.success) { %>
+                <script>
+                    toastr.success("<%= data.success %>");
+                </script>
+            <% } %>    
+        <% } %>
     </body>
 </html>
