--- a/src/resources/views/signup.ejs
+++ b/src/resources/views/signup.ejs
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <form action="#" method="post">
+            <form action="/signup" method="post">
                 <p class="mb-3">
                     <label for="name" class="form-label">Tên người dùng</label><br />
                     <input type="text" class="form-control" name="name" placeholder="Enter your name" />
