--- a/src/resources/views/login.ejs
+++ b/src/resources/views/login.ejs
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <form action="#" method="post">
+            <form action="/login" method="post">
                 <p class="mb-3">
                     <label for="email" class="form-label">Địa chỉ email</label><br />
                     <input
