--- a/src/resources/views/partials/header.ejs
+++ b/src/resources/views/partials/header.ejs
@@ -50,10 +50,17 @@
                 </div>
             </form> -->
             <ul class="nav navbar-nav pull-right">
-                <li class="nav-item"><a href="#" class="nav-link"><b>Admin</b></a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Đăng xuất</a></li>
+                <% if (user) { %>
+                <li class="nav-item"><a href="#" class="nav-link"><b><%= user.name %></b></a></li>
+                <li class="nav-item">
+                    <form action="/logout" method="post">
+                        <button type="submit" class="nav-link">Đăng xuất</button>
+                    </form>
+                </li>
+                <% } else {%>
                 <li class="nav-item"><a href="/login" class="nav-link">Đăng nhập</a></li>
                 <li class="nav-item"><a href="/signup" class="nav-link">Đăng kí</a></li>
+                <% } %>
             </ul>
         </div>
     </div>
