--- a/src/resources/views/home.ejs
+++ b/src/resources/views/home.ejs
@@ -5,48 +5,59 @@
         <div class="col text-center">
             <h1 class="text-primary">Chào mừng đến với Blog</h1>
             <p>Đây là kênh chia sẻ kiến thức, bài viết, giao lưu, học hỏi về Node, PHP, Web development</p>
-            <a href="#" class="btn btn-outline-primary">Đăng kí ngay</a>
+            <% if (currentUser) { %>
+                <a href="#content" class="btn btn-success">Khám phá nay</a>
+            <% } else {%>
+                <a href="/signup" class="btn btn-outline-primary">Đăng kí ngay</a>
+            <% } %>
         </div>
     </div>
 </div>
 
-<div class="container-fluid pt-5 pb-5 bg-light">
+<div class="container-fluid pb-5 bg-light">
     <div class="row">
         <div class="col-xl-3 d-none d-xl-block d-xxl-none"></div>
         <div class="col-xl-6">
             <div class="container">
+                <% if (currentUser) { %>
+                    <div class="row article-wrap mt-3 shadow p-3 bg-body rounded">
+                        <div class="article-info mb-3">
+                            <span class="text-secondary h6"><%= currentUser.name %>, bạn đang nghĩ gì?</span> 
+                        </div>
+                        <div class="article-reaction">
+                            <a href="/post/create" class="btn btn-light"><i class="fa-light fa-plus"></i> Tạo bài viết</a>
+                            <a href="#" class="btn btn-light"><i class="fa-regular fa-image"></i> Ảnh</a>
+                            <a href="#" class="btn btn-light"><i class="fa-regular fa-flag"></i> Sự kiện trong đời</a>
+                        </div>
+                      </div>
+                <% } %>
                 <div class="row">
                     <h1 class="text-center mt-3 mb-3 text-success">Mới cập nhật</h1>
                 </div>
-                <% if (typeof posts !== 'undefined' && posts.length > 0) { %>
-                    <% posts.forEach( (post) => { %>
-                    <div class="row article-wrap mt-3 shadow p-3 bg-body rounded">
-                        <div class="article-info">
-                            <span class="text-secondary h6"><%= post.author %></span>
-                            <small>
-                                <%= differenceDates(post.created_at) %>
-                            </small>
-                        </div>
-
-                        <div class="article-title">
-                            <a href="text-decoration-none"><%= post.name %></a>
-                        </div>
-
-                        <div class="article-body">
-                            <%= post.description %>
-                        </div>
-
-                        <div class="article-reaction">
-                            <button class="btn btn-light"><i class="fa-sharp fa-regular fa-thumbs-up"></i> Thích</button>
-                            <button class="btn btn-light"><i class="fa-regular fa-comment"></i> Bình luận</button>
-                            <button class="btn btn-light"><i class="fa-solid fa-share"></i> Chia sẻ</button>
-                        </div>
+                <% if (typeof posts !== 'undefined' && posts.length > 0) { %> <% posts.forEach( (post) => { %>
+                <div 
+                    <%= (post.id === 1) ? 'id=content' : '' %>
+                    class="row article-wrap mt-3 shadow p-3 bg-body rounded"
+                >
+                    <div class="article-info">
+                        <span class="text-secondary h6"><%= post.author %></span>
+                        <small> <%= differenceDates(post.created_at) %> </small>
                     </div>
-                    <% }) %>
-                <% } else { %>
-                    <div class="alert alert-warning">
-                        Chưa có bài viết nào !
+
+                    <div class="article-title">
+                        <a href="/post/<%= post.id %>" class="text-decoration-none"><%= post.name %></a>
                     </div>
+
+                    <div class="article-body"><%= post.description %></div>
+
+                    <div class="article-reaction">
+                        <button class="btn btn-light"><i class="fa-sharp fa-regular fa-thumbs-up"></i> Thích</button>
+                        <button class="btn btn-light"><i class="fa-regular fa-comment"></i> Bình luận</button>
+                        <button class="btn btn-light"><i class="fa-solid fa-share"></i> Chia sẻ</button>
+                    </div>
+                </div>
+                <% }) %> <% } else { %>
+                <div class="alert alert-warning">Chưa có bài viết nào !</div>
                 <% } %>
             </div>
         </div>
