--- a/src/resources/views/home.ejs
+++ b/src/resources/views/home.ejs
@@ -36,7 +36,11 @@
                 </div>
                 <% if (typeof posts !== 'undefined' && posts.length > 0) { %> <% posts.forEach( (post) => { %>
                 <div 
-                    <%= (post.id === 1) ? 'id=content' : '' %>
+                    <% if (post.id === 1) { %>
+                        id="content post-<%= post.id %>"    
+                    <% } else {%> 
+                        id="post-<%= post.id %>"
+                    <% } %>
                     class="row article-wrap mt-3 shadow p-3 bg-body rounded"
                 >
                     <div class="article-info">
@@ -52,7 +56,7 @@
 
                     <div class="article-reaction">
                         <button class="btn btn-light"><i class="fa-sharp fa-regular fa-thumbs-up"></i> Thích</button>
-                        <button class="btn btn-light"><i class="fa-regular fa-comment"></i> Bình luận</button>
+                        <a href="/post/<%= post.id %>#post-comment" class="btn btn-light"><i class="fa-regular fa-comment"></i> Bình luận</a>
                         <button class="btn btn-light"><i class="fa-solid fa-share"></i> Chia sẻ</button>
                     </div>
                 </div>
